--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,14 +1,14 @@
 
 <!-- añado padding arriba y abajo fijando el footer al fondo de pantalla -->
-<footer class="bg-light py-3 fixed-bottom">
+<footer class="bg-light py-1 fixed-bottom">
   <div class="container">
     <!-- pongo una fila y alineo -->
     <div class="row align-items-center">
       <!-- para que se reparta en la mitad de la pantalla -->
       <div class="col-md-6 text-center">
-        <a href="#" class="text-decoration-none me-3">Política de privacidad</a>
-        <a href="#" class="text-decoration-none me-3">Política de cookies</a>
-        <a href="#" class="text-decoration-none">Aviso legal</a>
+        <a href="#" class="text-decoration-none me-3 foota">Política de privacidad</a>
+        <a href="#" class="text-decoration-none me-3 foota">Política de cookies</a>
+        <a href="#" class="text-decoration-none foota">Aviso legal</a>
       </div>
       <!-- aplico margen arriba y le digo que lleve esto al final -->
       <div class="col-md-6 text-center text-md-end mt-3">
