--- a/src/assets/styles/_shares.scss
+++ b/src/assets/styles/_shares.scss
@@ -5,27 +5,41 @@
     @if $point == x-small-screen {
       @if $b-origen == "footer"{
           @return math.div($font-x-small, 1.5);  
+      } @else if $b-origen == "home" {
+          @return math.div($font-x-small, 1.2);
       } @else {
           @return $font-x-small;
       }  
+
+    // small-screen para pantallas a partir de 580px
     } @else if $point == small-screen {
         @if $b-origen == "footer"{
             @return math.div($font-small, 2);  
+        } @else if $b-origen == "home" {
+            @return math.div($font-small, 1.5);
         } @else {
             @return $font-small;
         }   
+
+    // medium-screen para pantallas a partir de 768px
     } @else if $point == medium-screen {
         @if $b-origen == "footer"{
             @return math.div($font-medium, 2.5);  
+        } @else if $b-origen == "home" {
+            @return math.div($font-medium, 1.8);
         } @else {
             @return $font-medium;
         }     
+
+    // large-screen para pantallas a partir de 1024px
     } @else if $point == large-screen {
         @if $b-origen == "footer"{
             @return math.div($font-large, 2.5);  
+        } @else if $b-origen == "home"{
+            @return math.div($font-large, 2);
         } @else {
             @return $font-large;
-        }     
+        }
     } 
 }
 
@@ -34,7 +48,7 @@
    
     // si es menor de 350px no puedo mostrar titulo que no me cabe, pero sí debo mostrar los textos del footer, al no llamar a screen-media debo hacer el calculo dentro de este if
     @media (max-width: 22rem) {
-      @if $origen == "footer" {
+      @if $origen == "footer" or $origen == "home" {
         font-size: math.div($font-x-small, 1.5);
       } @else {
         font-size:0;
@@ -42,17 +56,17 @@
     }
 
     // a partir de 580px
-    @media (min-width: 25rem) {
+    @media (min-width: $size-screen0) {
       font-size: screen-media(small-screen,$origen); 
     }
 
     // a partir de 768px
-    @media (min-width: 48rem) {
+    @media (min-width: $size-screen2) {
       font-size: screen-media(medium-screen,$origen); 
     }
 
     // a partir de 1024px  
-    @media (min-width: 64rem) {
+    @media (min-width: $size-screen3) {
         font-size: screen-media(large-screen,$origen);
     }
 
@@ -62,12 +76,19 @@
   max-width: 4rem;
 
   // a partir de 605px
-  @media (min-width: 38rem) {
+  @media (min-width: $size-screen1) {
     max-width: 7rem;
   }
 
   // a partir de 1024px
-  @media (min-width: 64rem) {
+  @media (min-width: $size-screen3) {
     max-width: 11rem;
   }
 }
+
+ @mixin head-foot {
+    max-width: 75rem;
+    width: calc(100% - 0.7rem);
+    margin: 0.5rem 1rem;
+    background-color: $bk-primary; 
+ }
