--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,28 +1,30 @@
-
-<!-- añado padding arriba y abajo fijando el footer al fondo de pantalla -->
-<footer class="bg-light py-1 fixed-bottom">
-  <div class="container">
-    <!-- pongo una fila y alineo -->
-    <div class="row align-items-center">
-      <!-- para que se reparta en la mitad de la pantalla -->
-      <div class="col-md-6 text-center">
-        <a href="#" class="text-decoration-none me-3 foota">Política de privacidad</a>
-        <a href="#" class="text-decoration-none me-3 foota">Política de cookies</a>
-        <a href="#" class="text-decoration-none foota">Aviso legal</a>
-      </div>
-      <!-- aplico margen arriba y le digo que lleve esto al final -->
-      <div class="col-md-6 text-center text-md-end mt-3">
-        <a href="#" class="me-3">
-          <i class="fa-brands fa-facebook fa-lg"></i>
-        </a>
-        <a href="#">
-          <i class="fa-brands fa-instagram fa-lg"></i>
-        </a>
-        <a href="#">
-          <i class="fa-brands fa-x-twitter fa-lg"></i>
-      </a>
-      </div>
-
-    </div>
-  </div>
+<footer>
+    <ul class="legales">
+        <li>
+            <a href="#">Política de privacidad</a>
+        </li>
+        <li>
+            <a href="#">Política de cookies</a>
+        </li>
+        <li>
+            <a href="#">Aviso legal</a>
+        </li>
+    </ul>
+    <ul class="redes">
+       <li>
+            <a href="#" title="Instagram">
+                <i class="fa-brands fa-instagram fa-lg"></i>
+            </a>
+        </li>
+        <li>
+            <a href="#" title="Facebook">
+                <i class="fa-brands fa-facebook fa-lg"></i>
+            </a>
+        </li>
+        <li>
+            <a href="#" title="X">
+                <i class="fa-brands fa-x-twitter fa-lg"></i>
+            </a>
+        </li>
+    </ul>
 </footer>
