--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -50,6 +50,12 @@ $color-hover: #664606ba;
 // VARIABLES PARA RESOLUCION DE PANTALLA
 
 $size-screen0: 25rem;
+
+// resolución de 544px
 $size-screen1: 34rem;
+
+// resolución de 768px
 $size-screen2: 48rem;
+
+// resolución de 1024px
 $size-screen3: 64rem;
